fix wrap

--- a/src/style.css
+++ b/src/style.css
@@ -175,7 +175,7 @@
     }
 
     @media (--ui-medium-devices) {
-      width: 33.33%;
+      width: 33%;
       margin-right: 10px;
     }
   }
@@ -184,7 +184,7 @@
     word-break: break-word;
 
     @media (--ui-medium-devices) {
-      width: 33.33%;
+      width: 33%;
       margin-right: 10px;
     }
   }
@@ -207,7 +207,7 @@
       }
 
       @media (--ui-medium-devices) {
-        width: 33.33%;
+        width: 33%;
       }
     }
 
@@ -227,7 +227,7 @@
     display: flex;
     max-width: 50%;
     align-items: center;
-    word-break: break-word;
+    word-break: break-all;
   }
 
   &__link {
@@ -238,6 +238,10 @@
       margin-top: 0;
       margin-left: auto;
       margin-right: 0;
+
+      .ui-button--link {
+        padding-right: 20px;
+      }
     }
 
     @media (--ui-medium-devices) {
